--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -15,7 +15,7 @@ es:
       not_found_in_database: "Correo o contraseña inválidos."
       timeout: "Tu sesión ha expirado, por favor identifícate de nuevo para continuar."
       unauthenticated: "Necesitas iniciar sesión o registrarte para continuar."
-      unconfirmed: "Debes confirmar tu cuenta para continuar."
+      unconfirmed: "Debes confirmar tu cuenta para continuar. Revisa la confirmación que te enviamos a tu correo electrónico"
       last_attempt: "Tienes un intento más antes que tu cuenta quede bloqueada."
     mailer:
       confirmation_instructions:
